configure room-list controller to index and _room views

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,5 +1,5 @@
 
-<li id="<%= dom_id room %>">
+<li id="<%= dom_id room %>" data-room-list-target="listItem">
   <p>
     <strong>Room</strong>: <%= room.name %>
   </p>
