improved form styling

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -6,7 +6,9 @@
       <p class="text-red-500" data-room-form-target="error"><%= message %></p>
     <% end %>
 
-    <%= f.text_field :name, class: "border-2", data: { "room-form-target": "name" } %>
-    <%= f.submit "Add new Room", class: "bg-blue-500 hover:bg-blue-700 text-white rounded px-3" %>
+    <div class="my-3">
+      <%= f.text_field :name, class: "my-2 border-2", data: { "room-form-target": "name" }, autofocus: true %>
+      <%= f.submit "Add new Room", class: "block bg-blue-500 hover:bg-blue-700 text-white rounded px-3" %>
+    </div>
   <% end %>
 <% end %>
