--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,6 @@
     <div class="container mx-auto px-4">
       <%= yield %>
     </div>
+    <%= turbo_frame_tag "room-modal" %>
   </body>
 </html>
