--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,6 +1,13 @@
 <%= turbo_frame_tag "messages_form" do %>
   <%= form_for [@room, @message] do |f| %>
-    <%= f.text_area :content %>
-    <%= f.submit %>
+    <% @message.errors.full_messages.each do |msg| %>
+      <p class="text-red-100"> <%= msg %></p>
+    <% end %>
+
+    <%= f.text_area :content, class: "block", autofocus: true %>
+    <%= f.text_field :author, class: "hidden" %>
+    <%= f.submit "Send",
+                 class: "block bg-green-500 hover:bg-green-700 text-white px-2 py-2 my-3 rounded-lg"
+    %>
   <% end %>
 <% end %>
