--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -9,7 +9,7 @@
     <%= turbo_stream_from "room_messages" %>
     
     <div id="room_messages">
-      <%= render @room.messages %>
+      <%= render partial: "messages/message", collection: @room.messages %>
     </div>
     
     <%= turbo_frame_tag "messages_form", src: new_room_message_path(@room) %>
