--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,11 +1,11 @@
 <%= turbo_frame_tag "messages_form" do %>
   <%= form_for [@room, @message] do |f| %>
     <% @message.errors.full_messages.each do |msg| %>
-      <p class="text-red-100"> <%= msg %></p>
+      <p class="text-red-500"> <%= msg %></p>
     <% end %>
 
     <%= f.text_area :content, class: "block", autofocus: true %>
-    <%= f.text_field :author, class: "hidden" %>
+    <%= f.text_field :author, class: "hidden", value: "anonymous" %>
     <%= f.submit "Send",
                  class: "block bg-green-500 hover:bg-green-700 text-white px-2 py-2 my-3 rounded-lg"
     %>
