--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,17 +1,21 @@
 <%= render "shared/modal" do %>
   <div
-    class="bg-slate-200 w-4/5 h-4/5 mx-auto flex flex-col justify-center items-center rounded-3xl shadow-xl"
+    class="bg-slate-200 w-full h-full mx-auto rounded-3xl shadow-xl"
   >
-    <h1 class="text-lg font-bold uppercase">
-      <%= @room.name %>
-    </h1>
-    
     <%= turbo_stream_from "room_messages" %>
-    
-    <div id="room_messages">
-      <%= render partial: "messages/message", collection: @room.messages %>
+
+    <div class="pt-3 w-11/12 h-full mx-auto">
+      <h1 class="text-center text-lg font-bold uppercase">
+        <%= @room.name %>
+      </h1>    
+      
+      <div
+        id="room_messages"
+        class="w-full h-[70%] overflow-y-scroll mb-3 bg-white rounded-xl"
+      >
+        <%= render partial: "messages/message", collection: @room.messages %>
+      </div>
+      <%= turbo_frame_tag "messages_form", src: new_room_message_path(@room) %>
     </div>
-    
-    <%= turbo_frame_tag "messages_form", src: new_room_message_path(@room) %>
   </div>
 <% end %>
