--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -3,11 +3,16 @@
     <% @message.errors.full_messages.each do |msg| %>
       <p class="text-red-500"> <%= msg %></p>
     <% end %>
-
-    <%= f.text_area :content, class: "block", autofocus: true %>
+    
     <%= f.text_field :author, class: "hidden", value: "anonymous" %>
-    <%= f.submit "Send",
-                 class: "block bg-green-500 hover:bg-green-700 text-white px-2 py-2 my-3 rounded-lg"
-    %>
+    <div class="w-full flex">
+      <%= f.text_area :content,
+                      class: "block w-[80%]",
+                      autofocus: true
+      %>
+      <%= f.submit "Send",
+                   class: "w-[20%] block bg-green-500 hover:bg-green-700 text-white px-2 py-2 my-3"
+      %>
+    </div>
   <% end %>
 <% end %>
