refactor message broadcasts to better scope it

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,12 +1,14 @@
+<%= turbo_stream_from message %>
 <div
   id=<%= dom_id message %>
   class="w-1/2 bg-green-100 rounded-sm my-1 px-1"
 >
+  
   <p class="font-bold">
     <%= message.author %>:
   </p>
 
-  <%= turbo_frame_tag "message_frame_#{message.id}" do %>
+  <%= turbo_frame_tag message do %>
     <p>
       <%= message.content %>
         <small class="block italic">
@@ -17,8 +19,8 @@
     </p>
     <%=link_to "Edit",
                edit_room_message_path(room_id: message.room_id, id: message.id),
-               class: "w-[40px] text-center block text-white bg-green-300 hover:bg-green-500 rounded-xl p-0.5 my-2",
-               data: { "turbo-frame": "message_frame_#{message.id}" }
+               class: "w-[40px] text-center block text-white bg-green-300 hover:bg-green-500 rounded-xl p-0.5 my-2"
     %>
-  <% end %>
+  
 </div>
+<% end %>
