--- a/app/views/rooms/_room_detail.erb
+++ b/app/views/rooms/_room_detail.erb
@@ -1,7 +1,7 @@
 <div
   class="bg-slate-200 w-full h-full mx-auto rounded-3xl shadow-xl"
 >
-  <%= turbo_stream_from "room_messages" %>
+  <%= turbo_stream_from @room %>
 
   <div class="pt-3 w-11/12 h-full mx-auto">
     <h1 class="text-center text-lg font-bold uppercase">
@@ -9,7 +9,7 @@
     </h1>    
     
     <div
-      id="room_messages"
+      id=<%= "room_#{@room.id}_messages" %>
       class="w-full h-[70%] overflow-y-scroll mb-3 bg-white rounded-xl"
     >
       <%= render partial: "messages/message", collection: @room.messages %>
