--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,13 @@
   </head>
 
   <body>
-    <div class="container mx-auto px-4">
-      <%= yield %>
+    <div data-controller="modal">
+      <div class="container mx-auto px-4">
+        <%= yield %>
+      </div>
+      <%= render "shared/modal" do %>
+        <%= turbo_frame_tag "room-modal" %>
+      <% end %>
     </div>
-    <%= turbo_frame_tag "room-modal" %>
   </body>
 </html>
