--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
+.form{
+  @apply w-[300px] bg-gray-200 my-6 p-7 rounded-3xl shadow-xl;
+}
+
+.form__control{
+  @apply my-4 w-full font-bold;
+}
+
+.form__label{
+  @apply block my-1;
+}
+
+.form__button{
+  @apply bg-green-400 hover:bg-green-600 text-white py-2 px-4 font-bold rounded-xl shadow-xl;
+}
