--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,25 +1,27 @@
-<h1>
-  Create a new user!
-</h1>
-
-<%= turbo_frame_tag "room-modal" do %>
-  <%= form_with model: @user do |f| %>
-    <div>
-      <%= f.text_field :first_name %>
-      <%= f.label :first_name%>
-    </div>
-    <div>
-      <%= f.text_field :last_name %>
-      <%= f.label :last_name%>
-    </div>
-    <div>
-      <%= f.text_field :username %>
-      <%= f.label :username%>
-    </div>
-    <div>
-      <%= f.text_field :email %>
-      <%= f.label :email %>
-    </div>
-    <%= f.submit %>
+<div>
+  <h1>
+    Create a new user!
+  </h1>
+  
+  <%= turbo_frame_tag "room-modal" do %>
+    <%= form_with model: @user, class: "form" do |f| %>
+      <div class="form__control">
+        <%= f.label :first_name, class: "form__label" %>
+        <%= f.text_field :first_name %>      
+      </div>
+      <div class="form__control">
+        <%= f.label :last_name, class: "form__label" %>
+        <%= f.text_field :last_name %>
+      </div>
+      <div class="form__control">
+        <%= f.label :username, class: "form__label" %>
+        <%= f.text_field :username %>      
+      </div>
+      <div class="form__control">
+        <%= f.label :email, class: "form__label" %>
+        <%= f.text_field :email %>      
+      </div>
+      <%= f.submit "Create User", class: "form__button" %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
