render messages views conditionally on current user

--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -2,7 +2,7 @@
   <%= form_for [@room, @message] do |f| %>
     <%= f.text_area :content %>
     <%= f.submit "Edit",
-                 class: "w-[40px] text-center text-white bg-green-300 hover:bg-green-500 rounded-xl p-0.5 my-2"
+                 class: "w-[40px] text-center text-white bg-blue-400 hover:bg-blue-600 rounded-xl p-0.5 my-2"
     %>
   <% end %>
 <% end %>
