--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -10,7 +10,7 @@
                       autofocus: true
       %>
       <%= f.submit "Send",
-                   class: "w-[20%] block bg-green-500 hover:bg-green-700 text-white px-2 py-2 my-3"
+                   class: "w-[20%] block bg-green-700 hover:bg-green-900 text-white font-bold px-2 py-2 my-3"
       %>
     </div>
   <% end %>
