--- a/app/views/rooms/_room_detail.erb
+++ b/app/views/rooms/_room_detail.erb
@@ -1,16 +1,16 @@
 <div
-  class="bg-slate-200 w-full h-full mx-auto rounded-3xl shadow-xl"
+  class="room__modal rounded-3xl shadow-xl"
 >
   <%= turbo_stream_from @room %>
 
-  <div class="pt-3 w-11/12 h-full mx-auto">
+  <div class="w-11/12 h-full mx-auto">
     <h1 class="text-center text-lg font-bold uppercase">
       <%= @room.name %>
     </h1>    
     
     <div
       id=<%= "messages" %>
-      class="w-full h-[70%] overflow-y-scroll mb-3 bg-white rounded-xl"
+      class="room__messages my-3"
     >
       <%= render partial: "messages/message", collection: @room.messages, locals: { user: current_user } %>
     </div>
