--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -3,7 +3,7 @@
   class="hidden w-[50vw] h-screen bg-blue-200 absolute top-0 right-0 z-10 rounded-3xl shadow-xl p-4"
 >
   <button
-    class="block bg-red-400 hover:bg-red-600 w-[25px] h-[25px] rounded-lg font-bold text-white text-center"
+    class="block bg-red-400 hover:bg-red-600 w-[25px] h-[5vh] rounded-lg font-bold text-white text-center"
     data-action="click->modal#hideModal"
   >
     x
