--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,30 +1,5 @@
-<div
-  class= "<%= "w-full flex #{is_current_user?(user: message.author, current: user.username) ? "justify-end" : "justify-start" }"%>"
->
-  <div
-    id=<%= dom_id message %>
-    class="w-1/2 max-w-[400px] bg-green-300 rounded-sm my-1 px-1"
-  >
-    
-    <p class="font-bold">
-      <%= message.author %>:
-    </p>
-  
-    <%= turbo_frame_tag message do %>
-      <p>
-        <%= message.content %>
-          <small class="block italic">
-            <%= message.edited? ?
-              "(edited): #{time_ago_in_words(message.updated_at)}":
-              time_ago_in_words(message.created_at) %> ago
-          </small>
-      </p>
-      <% if user.present? && user.username.eql?(message.author)%>
-      <%=link_to "Edit",
-                 edit_room_message_path(room_id: message.room_id, id: message.id),
-                 class: "w-[40px] text-center block text-white bg-blue-400 hover:bg-blue-600 rounded-xl p-0.5 my-2"
-      %>
-      <% end %>  
-  </div>
-  </div>
+<%= turbo_frame_tag message, src: room_message_path(room_id: message.id, id: message.id) do %>
+  <p>
+    Loading...
+  </p>
 <% end %>
