--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,7 @@
 <%= turbo_frame_tag message, src: room_message_path(room_id: message.id, id: message.id) do %>
-  <p>
-    Loading...
-  </p>
+  <div class="flex justify-center items-center my-3">
+    <div class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full text-purple-500" role="status">
+      <span class="visually-hidden"></span>
+    </div>
+  </div>
 <% end %>
