--- a/app/views/messages/_message_content.html.erb
+++ b/app/views/messages/_message_content.html.erb
@@ -1,12 +1,12 @@
 <div
-  class= "<%= "w-full flex #{is_current_user?(user: message.author, current: current_user) ? "justify-end" : "justify-start" }"%>"
+  class= "<%= "w-full flex #{is_current_user?(user: message.user, current: current_user) ? "justify-end" : "justify-start" }"%>"
 >
   <div    
-    class="<%= "w-1/2 max-w-[400px] rounded-sm my-1 px-1 #{is_current_user?(user: message.author, current: current_user) ? "bg-emerald-600 text-white" : "bg-green-300"}" %>"
+    class="<%= "w-1/2 max-w-[400px] rounded-sm my-1 px-1 #{is_current_user?(user: message.user, current: current_user) ? "bg-emerald-600 text-white" : "bg-green-300"}" %>"
   >
     
     <p class="font-bold">
-      <%= message.author %>:
+      <%= message.user.username %>:
     </p>
   
     <p>
@@ -17,7 +17,7 @@
             time_ago_in_words(message.created_at) %> ago
         </small>
     </p>
-    <% if is_current_user?(user: message.author, current: current_user) %>
+    <% if is_current_user?(user: message.user, current: current_user) %>
       <%=link_to "Edit",
                  edit_room_message_path(room_id: message.room_id, id: message.id),
                  class: "w-[40px] text-center block text-white bg-blue-400 hover:bg-blue-600 rounded-xl p-0.5 my-2"
